--- a/Udemy_Data_Science_Neural_Networks_Project.ipynb
+++ b/Udemy_Data_Science_Neural_Networks_Project.ipynb
@@ -241,7 +241,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Preemptive Exploratory Data Analysis"
+    "# Preemptive Exploratory Data Analysis\n",
+    "### First of all we want to explore our data, find important features, duplicate information, correlations, missing data etc. We can also use our limited domain knowledge to infer relations between the features."
    ]
   },
   {
@@ -289,7 +290,7 @@
    "metadata": {},
    "source": [
     "### There is a slight increase of charged off large loans, but not much\n",
-    "### We and also check that by examining the numbers:"
+    "### We can also check that by examining the numbers:"
    ]
   },
   {
